Dodati hendleri neki

--- a/backend/Api_gateway/api_gateway.conf
+++ b/backend/Api_gateway/api_gateway.conf
@@ -8,7 +8,7 @@ server {
     listen          8000;
     server_name     localhost;
 
-    location /tuzilastvo_service/ {
+    location /api/tuzilastvo/ {
             if ($request_method = 'OPTIONS') {
                   add_header 'Content-Type' 'text/plain charset=UTF-8';
                   add_header 'Content-Length' 0;
@@ -31,7 +31,7 @@ server {
             }
 
         proxy_pass http://tuzilastvo_service;
-        rewrite ^/tuzilastvo_service/(.*)$ /$1 break;
+        rewrite ^/api/tuzilastvo/(.*)$ /$1 break;
     }
 
 }
