--- a/backend/Api_gateway/api_gateway.conf
+++ b/backend/Api_gateway/api_gateway.conf
@@ -12,20 +12,20 @@ server {
             if ($request_method = 'OPTIONS') {
                   add_header 'Content-Type' 'text/plain charset=UTF-8';
                   add_header 'Content-Length' 0;
-                  add_header 'Access-Control-Allow-Origin' 'https://localhost:4200';
+                  add_header 'Access-Control-Allow-Origin' 'http://localhost:4200';
                   add_header 'Access-Control-Allow-Credentials' 'true';
                   add_header 'Access-Control-Allow-Headers' 'Content-Type, access-control-allow-methods, access-control-allow-origin, content-type, access-control-allow-headers, authorization';
                   add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS';
                   return 204;
             }
             if ($request_method = 'POST') {
-                add_header 'Access-Control-Allow-Origin' 'https://localhost:4200' always;
+                add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
                 add_header 'Access-Control-Allow-Headers' 'Content-Type' always;
                 add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS' always;
             }
 
             if ($request_method = 'GET') {
-                add_header 'Access-Control-Allow-Origin' 'https://localhost:4200' always;
+                add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
                 add_header 'Access-Control-Allow-Headers' 'Content-Type' always;
                 add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS' always;
             }
