--- a/backend/Api_gateway/api_gateway.conf
+++ b/backend/Api_gateway/api_gateway.conf
@@ -15,19 +15,25 @@ server {
                   add_header 'Access-Control-Allow-Origin' 'http://localhost:4200';
                   add_header 'Access-Control-Allow-Credentials' 'true';
                   add_header 'Access-Control-Allow-Headers' 'Content-Type, access-control-allow-methods, access-control-allow-origin, content-type, access-control-allow-headers, authorization';
-                  add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS';
+                  add_header 'Access-Control-Allow-Methods' 'OPTIONS, POST, PUT, GET';
                   return 204;
             }
             if ($request_method = 'POST') {
                 add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
                 add_header 'Access-Control-Allow-Headers' 'Content-Type' always;
-                add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS' always;
+                add_header 'Access-Control-Allow-Methods' 'POST' always;
             }
 
             if ($request_method = 'GET') {
                 add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
                 add_header 'Access-Control-Allow-Headers' 'Content-Type' always;
-                add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS' always;
+                add_header 'Access-Control-Allow-Methods' 'GET' always;
+            }
+
+            if ($request_method = 'PUT') {
+                add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
+                add_header 'Access-Control-Allow-Headers' 'Content-Type' always;
+                add_header 'Access-Control-Allow-Methods' 'PUT' always;
             }
 
         proxy_pass http://tuzilastvo_service;
