--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -42,6 +42,16 @@ services:
     ports:
       - 27017:27017
 
+  mup_db:
+    image: mongo
+    restart: always
+    healthcheck:
+      test: echo 'db.runCommand("ping").ok'
+    volumes:
+      - mongo_store:/data/mongoMup
+    ports:
+      - 27018:27017
+
 
 volumes:
     mongo_store:
