--- a/backend/MUP/package.json
+++ b/backend/MUP/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsnd --respawn src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "start": "node ./out/index.js"
   },
   "keywords": [],
   "author": "",
