funkcionalnosti za poternicu,rociste,sudstvo backend

--- a/backend/Api_gateway/api_gateway.conf
+++ b/backend/Api_gateway/api_gateway.conf
@@ -2,6 +2,10 @@ upstream tuzilastvo_service {
     server tuzilastvo_service:8001;
 }
 
+upstream sudstvo_service {
+    server sudstvo_service:8002;
+}
+
 
 server {
 
@@ -39,5 +43,37 @@ server {
         proxy_pass http://tuzilastvo_service;
         rewrite ^/api/tuzilastvo/(.*)$ /$1 break;
     }
+
+    location /api/sudstvo/ {
+                if ($request_method = 'OPTIONS') {
+                      add_header 'Content-Type' 'text/plain charset=UTF-8';
+                      add_header 'Content-Length' 0;
+                      add_header 'Access-Control-Allow-Origin' 'http://localhost:4200';
+                      add_header 'Access-Control-Allow-Credentials' 'true';
+                      add_header 'Access-Control-Allow-Headers' 'Content-Type, access-control-allow-methods, access-control-allow-origin, content-type, access-control-allow-headers, authorization';
+                      add_header 'Access-Control-Allow-Methods' 'OPTIONS, POST, PUT, GET';
+                      return 204;
+                }
+                if ($request_method = 'POST') {
+                    add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
+                    add_header 'Access-Control-Allow-Headers' 'Content-Type' always;
+                    add_header 'Access-Control-Allow-Methods' 'POST' always;
+                }
+
+                if ($request_method = 'GET') {
+                    add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
+                    add_header 'Access-Control-Allow-Headers' 'Content-Type' always;
+                    add_header 'Access-Control-Allow-Methods' 'GET' always;
+                }
+
+                if ($request_method = 'PUT') {
+                    add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
+                    add_header 'Access-Control-Allow-Headers' 'Content-Type' always;
+                    add_header 'Access-Control-Allow-Methods' 'PUT' always;
+                }
+
+            proxy_pass http://sudstvo_service;
+            rewrite ^/api/sudstvo/(.*)$ /$1 break;
+        }
 
 }
