--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -71,6 +71,39 @@ services:
       - mup
 
 
+
+  sudstvo_service:
+    image: sudstvo_service
+    build:
+      context: .
+      dockerfile: ./Sudstvo/Dockerfile
+    restart: always
+    container_name: 'sudstvo_service'
+    hostname: 'sudstvo_service'
+    environment:
+      - MONGO_DB_URI=mongodb://sudstvo_db:27019
+      - app_port=${SUDSTVO_SERVICE_PORT}
+    healthcheck:
+      test: echo 'db.runCommand("ping").ok'
+    depends_on:
+      sudstvo_db:
+        condition: service_healthy
+
+
+  sudstvo_db:
+    image: mongo
+    restart: always
+    environment:
+      MONGO_INITDB_DATABASE: myDB
+    # Docker healtcheck - checks if database is "alive"
+    healthcheck:
+      test: echo 'db.runCommand("ping").ok'
+    volumes:
+      - mongo_store:/data/mongoSudstvo
+    ports:
+      - 27019:27017
+
+
 volumes:
     mongo_store:
 
