ispravljena greska nesto za port na beku

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,6 @@
 TUZILASTVO_DB_URI=mongodb://tuzilastvo_db:27017
 TUZILASTVO_SERVICE_PORT=8001
 TUZILASTVO_SERVICE_HOST=tuzilastvo_service
+SUDSTVO_SERVICE_PORT = 8002
+SUDSTVO_DB_URI =mongodb://sudstvo_db:27017
+SUDSTVO_SERVICE_HOST = sudstvo_service
