--- a/backend/Api_gateway/api_gateway.conf
+++ b/backend/Api_gateway/api_gateway.conf
@@ -6,6 +6,10 @@ upstream sudstvo_service {
     server sudstvo_service:8002;
 }
 
+upstream mup_service {
+    server mup_service:8004;
+}
+
 
 server {
 
@@ -75,5 +79,37 @@ server {
             proxy_pass http://sudstvo_service;
             rewrite ^/api/sudstvo/(.*)$ /$1 break;
         }
+
+        location /api/mup/ {
+            if ($request_method = 'OPTIONS') {
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                add_header 'Access-Control-Allow-Origin' 'http://localhost:4200';
+                add_header 'Access-Control-Allow-Credentials' 'true';
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, access-control-allow-methods, access-control-allow-origin, content-type, access-control-allow-headers, authorization';
+                add_header 'Access-Control-Allow-Methods' 'OPTIONS, POST, PUT, GET';
+                return 204;
+            }
+            if ($request_method = 'POST') {
+                add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
+                add_header 'Access-Control-Allow-Headers' 'Content-Type' always;
+                add_header 'Access-Control-Allow-Methods' 'POST' always;
+            }
+
+            if ($request_method = 'GET') {
+                add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
+                add_header 'Access-Control-Allow-Headers' 'Content-Type' always;
+                add_header 'Access-Control-Allow-Methods' 'GET' always;
+            }
+
+            if ($request_method = 'PUT') {
+                add_header 'Access-Control-Allow-Origin' 'http://localhost:4200' always;
+                add_header 'Access-Control-Allow-Headers' 'Content-Type' always;
+                add_header 'Access-Control-Allow-Methods' 'PUT' always;
+            }
+
+            proxy_pass http://mup_service;
+            rewrite ^/api/mup/(.*)$ /$1 break;
+    }
 
 }
