Backend MUP Fix

--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,6 @@ TUZILASTVO_SERVICE_HOST=tuzilastvo_service
 SUDSTVO_SERVICE_PORT = 8002
 SUDSTVO_DB_URI =mongodb://sudstvo_db:27017
 SUDSTVO_SERVICE_HOST = sudstvo_service
+GP_DB_URI=mongodb://gp_db:27017
+GP_SERVICE_PORT=8003
+GP_SERVICE_HOST=gp_service
